Moved the travelVoucher from patient to period table. Customized the error page + edited the appending stay periods to the existing patients